--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,7 @@
+#
+# This is a test docker-compose files
+# Do not use this in prod envirement
+#
 version: '3'
 
 services:
@@ -10,26 +14,27 @@ services:
       MYSQL_PASSWORD: password
       MYSQL_ROOT_PASSWORD: rootpassword
       TZ: Africa/Tunis
-    #volumes:
-    #  - ./127.0.0.1/mysql:/var/lib/mysql
 
   apache-php7.3:
-    image: mindengineering/apache:php7.3
-    #build: ./
+    #image: mindengineering/apache:php7.3
+    build: ./
     depends_on:
       - db
     restart: unless-stopped
     links:
       - db:db
-    #volumes:
-    #  - ./127.0.0.1/web:/web_data/public_html
     hostname: 127.0.0.1
     environment:
-      FILEMANAGER_ROOT_PATH: '/web_data'
+      FILEMANAGER_ROOT_PATH: '/var/www/html'
       ADMIN_USERNAME: admin
       ADMIN_PASSWORD: password
       ADMIN_EMAIL: admin@localhost.tn
       VIRTUAL_HOST: 127.0.0.1
       TZ: Africa/Tunis
+      PHP_MEMORY_LIMIT: '512M'
+      PHP_MAX_EXECUTION_TIME: '300'
+      PHP_MAX_FILESIZE: '64M'
+      PHP_POST_MAX_SIZE: '128M'
+      PHP_INPUT_VARS: '5000'
     ports:
       - 80:80
