--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ version: '3'
 services:
   db:
     image: mysql:5.7.29
-    restart: unless-stopped
     environment:
       MYSQL_DATABASE: admin
       MYSQL_USER: admin
@@ -15,12 +14,10 @@ services:
       MYSQL_ROOT_PASSWORD: rootpassword
       TZ: Africa/Tunis
 
-  apache-php7.3:
-    #image: mindengineering/apache:php7.3
+  web:
     build: ./
     depends_on:
       - db
-    restart: unless-stopped
     links:
       - db:db
     hostname: 127.0.0.1
