fix container imagename name

--- a/portainer-tpl-swarm-require-traefik.yml
+++ b/portainer-tpl-swarm-require-traefik.yml
@@ -41,7 +41,7 @@ services:
       - backend
 
   web:
-    image: mindhosting/wordpress:latest
+    image: mindhosting/apachephp:latest
     deploy:
       replicas: $WEB_REPLICAS
       restart_policy:
