--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,33 @@
 #
 # This is a test docker-compose files
-# Do not use this in prod envirement
+# To use it in the production environment, modify the database credentials
 #
 version: '3'
 
-services:
-  db:
-    image: mysql:5.7.29
-    environment:
-      MYSQL_DATABASE: admin
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: password
-      MYSQL_ROOT_PASSWORD: rootpassword
-      TZ: Africa/Tunis
+#services:
+#  db:
+#    image: mysql:5.7.29
+#    environment:
+#      MYSQL_DATABASE: admin
+#      MYSQL_USER: admin
+#      MYSQL_PASSWORD: password
+#      MYSQL_ROOT_PASSWORD: rootpassword
+#      TZ: Africa/Tunis
 
   web:
-    build: ./
-    depends_on:
-      - db
-    links:
-      - db:db
-    hostname: 127.0.0.1
+    image: mindhosting/apachephp:7.4
+ #   depends_on:
+ #     - db
+ #   links:
+ #     - db:db
     environment:
-      FILEMANAGER_ROOT_PATH: '/var/www/html'
-      ADMIN_USERNAME: admin
-      ADMIN_PASSWORD: password
-      ADMIN_EMAIL: admin@localhost.tn
-      VIRTUAL_HOST: 127.0.0.1
       TZ: Africa/Tunis
       PHP_MEMORY_LIMIT: '512M'
       PHP_MAX_EXECUTION_TIME: '300'
       PHP_MAX_FILESIZE: '64M'
       PHP_POST_MAX_SIZE: '128M'
       PHP_INPUT_VARS: '5000'
+#    volumes:
+#       - ./:/var/www/html
     ports:
       - 80:80
